--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pompa",
-  "version": "0.1.0",
+  "version": "0.1.17",
   "description": "Pompa is a utility that detects the package manager being used in a project and executes the appropriate commands accordingly. It simplifies the development workflow by removing the need for manual checks and allows seamless integration with both npm and Yarn.",
   "main": "index.js",
   "scripts": {
-    "pompa": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
     "pompa": "./index.js"
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/rodrigoea/pompa#readme",
   "dependencies": {
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "lodash": "^4.17.21"
   }
 }
