--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pompa",
-  "version": "0.1.28",
+  "version": "0.1.29",
   "description": "Pompa is a utility that detects the package manager being used in a project and executes the appropriate commands accordingly. It simplifies the development workflow by removing the need for manual checks and allows seamless integration with both npm and Yarn.",
   "main": "index.js",
   "scripts": {
@@ -26,5 +26,11 @@
   "dependencies": {
     "fs-extra": "^11.1.1",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.43.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "prettier": "2.8.8"
   }
 }
