--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   },
   "homepage": "https://github.com/rodrigoea/pompa#readme",
   "dependencies": {
-    "fs-extra": "^11.1.1",
-    "lodash": "^4.17.21"
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
